@@ -6,6 +6,6 @@ export ASTRA_DB_APPLICATION_TOKEN="AstraCS:..."
 
 export ASTRA_DB_API_ENDPOINT="https://<DB_ID>-<DB_REGION>.apps.astra.datastax.com"
 
-# OPTIONAL (the first has a default; a few tests are skipped if the second is missing):
+# OPTIONAL. Default keyspace names if omitted. Keyspaces are created if needed.
 # export ASTRA_DB_KEYSPACE="..."
 # export ASTRA_DB_SECONDARY_KEYSPACE="..."
